Study area overflow fix

--- a/frontend/src/app/study-area/study-area.component.css
+++ b/frontend/src/app/study-area/study-area.component.css
@@ -67,7 +67,6 @@ ul {
   width: 90%;
   height: 60px;
   text-align: center;
-  overflow: auto;
 }
 
 
